<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="loading">Loading...</string>
    <string name="category">Categories</string>
    <string name="recommended">Recommended</string>
    <string name="building_brainslam">Build your Brain-Slam!</string>
    <string name="landingpage_text">Start by picking some of the things that you \n like to watch and see what\'s trending.</string>
    <string name="friends">Friends</string>
    <string name="crew">CREW</string>
    <string name="following">FOLLOWING</string>
    <string name="newtext">New</string>
    <string name="highestrated">Highest Rated</string>
    <string name="mostviews">Most Views</string>
    <string name="app_name">BrainSlam</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="title_activity_playlist__action_bar">Playlist_ActionBar</string>
    <string name="title_activity_playlist__screen">Playlist_Screen</string>
    <string name="title_activity_playlist__listview">Playlist_Listview</string>
    <string name="title_activity_popup__added">Popup_Added</string>
    <string name="popup_first_textView">Added to My Stream</string>
    <string name="popup_second_textView">Most Viewed-Today-Brain-Slam</string>
    <string name="popup_third_textView"> Most Rated-Today</string>
    <string name="title_activity_video__rating__screen">Video_Rating_Screen</string>
    <string name="title_activity_guide">Guide</string>
    <string name="activity_guide_textviewguide">How To Use Brain-Slam!</string>
    <string name="activity_guide_starttext">Start Brain-Slamming!</string>
    <string name="title_activity_send_message">SendMessageActivity</string>
    <string name="title_activity_message__reading">Message_ReadingActivity</string>
    <string name="title_activity_friend__notification">Friend_NotificationActivity</string>
    <string name="title_activity_playlist_name">PlaylistName</string>
    <string name="title_activity_playlist_items_listaction">Shuffle Playlist</string>
    <string name="title_activity_filter_box">FilterBoxActivity</string>
    <string name="title_activity_main_screen__category">MainScreen_CategoryActivity</string>
    <string name="activity_main_screen__category_title">Categories</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_update_twitter_status">UpdateTwitterStatusActivity</string>
    <string name="categoriesandfriends">Categories &amp; Friends</string>
    <string name="title_activity_video_rating">VideoRatingActivity</string>
    <string name="brain_slam_message_title">Brain-Slam Messages</string>
    <string name="Send_messages_text">Send Message</string>
    <string name="group_message_title">Group Messages</string>
    <string name="user_message_title">User Messages</string>
    <string name="all">All</string>
    <string name="title_activity_edit_streaming">EditStreamingActivity</string>
    <string name="title_activity_my_account">MyAccountActivity</string>
    <string name="app_id">265406946951975</string>
    <string name="title_activity_screen_captured_edit">ScreenCapturedEdit</string>
    <string name="title_activity_main_stream_sort">MainStreamSort</string>
    <string name="activity_mainscreen_sort_text">Sort</string>
    <string name="activity_mainscreen_sort_by_date">Sort By Date</string>
    <string name="activity_mainscreen_sort_by_stream">Sort By Stream</string>

    <string-array name="sort_by_stream_array">
        <item>New</item>
        <item>Popular</item>
        <item>Most Viewes</item>
        <item>Most Rated</item>
        <item>IQ - High To Low</item>
        <item>IQ - Low To High</item>
    </string-array>
    
    <string-array name="sort_by_date_array">
        <item>Today</item>
        <item>This Week</item>
        <item>This Month</item>
        <item>This Year</item>
    </string-array>
    
    <string name="screen_capture_edit_duration_start_text">Start:</string>
    <string name="screen_capture_edit_duration_end_text">End:</string>
    <string name="screen_capture_edit_duration_length_text">Length:</string>
    <string name="screen_capture_edit_duration_select_cover_photo">Select Cover\n  Photo</string>
    <string name="next_text">Next</string>
    <string name="load_more_comments">View More Comments</string>

</resources>