<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PopupAdded"
    android:background="@android:color/black" >

    <ImageView
        android:id="@+id/sucessfully_added"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/checkmark" />

    <TextView
         android:id="@+id/mystream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sucessfully_added"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:text="@string/popup_first_textView" />

     <TextView
         android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_below="@+id/mystream"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
         android:background="@android:color/white" 
         android:layout_margin="20dp"/>
     <TextView
         android:id="@+id/today_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/slam_word_color"
        android:text="@string/popup_second_textView" />
     <TextView
         android:id="@+id/rated_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/today_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/slam_word_color"
        android:text="@string/popup_third_textView" />
     

</RelativeLayout>
