<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent" >

    <LinearLayout
        android:id="@+id/sort_by_stream_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_sort"
        android:layout_alignParentLeft="true"
        android:background="@color/black"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sort_by_stream" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_mainscreen_sort_by_stream"
                android:textColor="@color/blue_kaltura"
                android:textSize="@dimen/activity_login_screen_buttontextsize" />
        </LinearLayout>

        <com.external_api.android_wheel.widget.WheelView
            android:id="@+id/sort_by_stream_wheel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sort_by_date_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_sort"
        android:layout_alignParentRight="true"
        android:background="@color/black"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/title_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sort_by_date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_mainscreen_sort_by_date"
                android:textColor="@color/blue_kaltura"
                android:textSize="@dimen/activity_login_screen_buttontextsize" />
        </LinearLayout>

        <com.external_api.android_wheel.widget.WheelView
            android:id="@+id/sort_by_date_wheel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_sort"
        android:layout_centerHorizontal="true"
        android:src="@drawable/triangle" />

    <Button
        android:id="@+id/button_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/slam_word_color"
        android:padding="5dp"
        android:text="@string/activity_mainscreen_sort_text"
        android:textColor="@color/white"
        android:textSize="@dimen/activity_login_screen_buttontextsize"
        android:textStyle="bold" />

    
    
    
    
    
</RelativeLayout>