<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
 
    <LinearLayout
        android:id="@+id/activity_landing_bottombar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="2dp"
        android:background="@color/blue_kaltura"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/activity_landing_bottombar_category"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:clickable="true"
            android:gravity="center"
            android:onClick="bottomtabclk"
            android:padding="10dp"
            android:text="@string/category"
            android:textColor="@color/blue_kaltura" />

        <TextView
            android:id="@+id/activity_landing_bottombar_all"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@color/blue_kaltura"
            android:clickable="true"
            android:gravity="center"
            android:onClick="bottomtabclk"
            android:padding="10dp"
            android:text="@string/all"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/activity_landing_bottombar_friends"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:clickable="true"
            android:gravity="center"
            android:onClick="bottomtabclk"
            android:padding="10dp"
            android:text="@string/friends"
            android:textColor="@color/blue_kaltura" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/activity_landing_searchbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/brain_word_color"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="10" >

        <EditText
            android:id="@+id/landing_searchbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/screen_landing_searchbar_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_marginRight="55dp"
            android:layout_weight="4"
            android:background="@drawable/search_bar_bg"
            android:drawableLeft="@drawable/searchicon"
            android:focusableInTouchMode="true"
            android:ellipsize="end"
            android:hint="  Search Friends &amp; Categories"
            android:imeOptions="actionSearch"
            android:textSize="@dimen/landing_search_text_size"
            android:singleLine="true" />

        <TextView
            android:id="@+id/landing_searchbar_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:onClick="onClick"
            android:padding="5dp"
            android:singleLine="true"
            android:text="Done"
            android:textColor="@color/white"
            android:textSize="@dimen/screen_landing_done_button_text_size"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="@dimen/screen_landing_scrollView_margin_top" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/llrecomended"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/screen_landing_logo_text_margin_top"
                    android:src="@drawable/logo_text" />
                <!--
            <LinearLayout
                android:id="@+id/brainslam_textlayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center" >

                <TextView
                    android:id="@+id/first_bracket"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/start_bracket"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/activity_login_screen_textSize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/brain_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/brain"
                    android:textColor="@color/brain_word_color"
                    android:textSize="@dimen/activity_login_screen_textSize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/hyphen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hyphen"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/activity_login_screen_textSize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/slam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slam"
                    android:textColor="@color/slam_word_color"
                    android:textSize="@dimen/activity_login_screen_textSize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/close_bracket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close_bracket"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/activity_login_screen_textSize"
                    android:textStyle="bold" />
            </LinearLayout>
                -->

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/building_brainslam"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/landingpage_text"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/recommended"
                    android:textColor="@color/slam_word_color"
                    android:textSize="@dimen/activity_login_screen_textSize" />

                <ListView
                    android:id="@+id/activity_landing_tiles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@null"
                    
                    android:dividerHeight="0dp"
                    android:visibility="visible" >
                </ListView>

                <GridView
                    android:id="@+id/landing_tile_gridview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnWidth="0dp"
                    android:numColumns="3"
                    android:visibility="gone"
                    android:verticalSpacing="0dp" >
                </GridView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/white"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:layout_marginTop="5dp"
                    android:text="@string/categoriesandfriends"
                    android:textColor="@color/strip" />
            </LinearLayout>

            <ListView
                android:id="@+id/activity_landing_category_grid"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:divider="@color/white"
                android:dividerHeight="1dp"
                android:headerDividersEnabled="true"
                android:persistentDrawingCache="all"
                android:splitMotionEvents="false" >
            </ListView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>