<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="5"
    android:background="@color/white"
     >

    <ImageView
        android:id="@+id/downmenu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:onClick="backclick"
        android:padding="5dp"
        android:src="@drawable/arrow" />

    <TextView
        android:id="@+id/playlistusernm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center_horizontal"
        android:padding="12dp"
        android:text="Username"
        android:textSize="@dimen/activity_playlist_actionbar_playlistSize" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:clickable="true"
        android:onClick="editclk"
        android:padding="10dp"
        android:text=" Edit"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/brain_word_color" />
     
</LinearLayout>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="History" />
    </TableRow>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/currently_playing"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/brain_word_color" >
            </LinearLayout>

            <com.android.brainslam.horizonatlscrollview.HorizontalListView
                android:id="@+id/featured_videos_list_view"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:background="#ddd" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@color/blue_kaltura"
                android:orientation="horizontal"
                android:weightSum="3" >

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/blue_kaltura"
                    android:clickable="true"
                    android:gravity="center"
                   
                    android:padding="10dp"
                    android:text="@string/newtext"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/black"
                    android:clickable="true"
                    android:gravity="center"
                   
                    android:padding="10dp"
                    android:text="@string/highestrated"
                    android:textColor="@color/blue_kaltura" />

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@color/black"
                    android:clickable="true"
                    android:gravity="center"
                  
                    android:padding="10dp"
                    android:text="@string/mostviews"
                    android:textColor="@color/blue_kaltura" />
            </LinearLayout>

            <ListView
                android:id="@+id/listView1"
                android:layout_width="match_parent"
                android:layout_height="fill_parent" >
            </ListView>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/currently_playing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/include2"
        android:background="@color/brain_word_color"
        android:gravity="center"
        android:text="Currently playing"
        android:textColor="@android:color/black" />

    <include
        android:id="@+id/include2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/playlist_items_bottomactionbar" />

</RelativeLayout>